--- a/Fynd Projects/my mix project using only html/timetable1.html
+++ b/Fynd Projects/my mix project using only html/timetable1.html
@@ -9,7 +9,7 @@
       }
       </style>
 </head>
-<body background="image\formbg1.jpeg">
+<body background="image\tt1.jpeg">
 <H1><FONT COLOR="purple"><CENTER><u>COLLEGE TIME TABLE</u></FONT></H1>
 <br><br><br><br><br><br>
 <table border="2" cellspacing="3" align="center" bordercolor="brown">
